--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>아르플래닛</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
