--- a/public/index.html
+++ b/public/index.html
@@ -7,38 +7,29 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Arplanet web site , 아르플래닛 웹 사이트"
+      content="아르플래닛은 광주 지역의 청년 아티스트들이 모여 클래식을 연주하는 클래식 기획 회사입니다."
+    />
+    <meta
+      name="keywords"
+      content="아르플래닛, 클래식, 광주, 청년 아티스트, 클래식 연주, 클래식 기획"
+    />
+    <meta name="author" content="아르플래닛" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="아르플래닛 - 광주 청년 아티스트들의 클래식 연주"
+    />
+    <meta
+      name="twitter:description"
+      content="아르플래닛은 광주 지역의 청년 아티스트들이 모여 클래식을 연주하는 클래식 기획 회사입니다."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>아르플래닛</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
