add: open graph meta tag 추가

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,16 @@
       name="twitter:description"
       content="아르플래닛은 광주 지역의 청년 아티스트들이 모여 클래식을 연주하는 클래식 기획 회사입니다."
     />
+    <meta
+      property="og:title"
+      content="아르플래닛 - 광주 청년 아티스트들의 클래식 연주"
+    />
+    <meta
+      property="og:description"
+      content="아르플래닛은 광주 지역의 청년 아티스트들이 모여 클래식을 연주하는 클래식 기획 회사입니다."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/arplanet.jpeg" />
+    <meta property="og:url" content="https://arplanet.co.kr" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>아르플래닛</title>
